--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "onelenykco",
-  "short_name": "onelenykco",
+  "name": "onelenyk.dev",
+  "short_name": "onelenyk.dev",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
