--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: onelenyk studio
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0-Apple+0
+version: 1.0.0-Apple+6
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -60,12 +60,12 @@ flutter:
 
   uses-material-design: true
   assets:
+    - dotenv.env
     - assets/images/
     - assets/svgs/
     - assets/animation/
     - assets/fire.json
     - assets/resume.pdf
-    - assets/.env
   fonts:
     - family: Bandana
       fonts:
