--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: onelenyk studio
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0-Apple+6
+version: 2.0.0-Banana+7
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
