--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: onelenyk studio
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 3.0.0-Cherry+8
+version: 4.0.0-Date+9
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
