feat: add isMenuOpened property and openMenu method

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   pdf: ^3.10.7
   package_info_plus: ^5.0.1
   flutter_dotenv: ^5.1.0
+  multi_split_view: ^2.4.0
 
 dev_dependencies:
   flutter_test:
