--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   build_runner: ^2.4.6
   auto_route_generator: ^7.3.2
   json_serializable: ^6.7.1
@@ -67,6 +67,7 @@ flutter:
     - assets/animation/
     - assets/fire.json
     - assets/resume.pdf
+    - assets/resume.json
   fonts:
     - family: Bandana
       fonts:
