--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   cached_network_image: ^3.3.0
   google_fonts: ^6.1.0
   flutter_staggered_grid_view: ^0.7.0
-  flutter_markdown: ^0.6.18+2
+  flutter_markdown: ^0.6.18+3
   markdown_widget: ^2.3.1
   equatable: ^2.0.5
   timeago: ^3.6.0
@@ -49,6 +49,7 @@ dependencies:
   package_info_plus: ^5.0.1
   flutter_dotenv: ^5.1.0
   multi_split_view: ^2.4.0
+  markdown: ^7.1.1
 
 dev_dependencies:
   flutter_test:
