--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: onelenyk studio
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 7.0.0-Grape+16
+version: 9.0.0-Icaco+19
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
