--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: onelenyk studio
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 10.0.0-Jackfruit+20
+version: 11.0.0-Kiwi+21
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
