--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   multi_split_view: ^2.4.0
   markdown: ^7.1.1
+  popover: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,7 @@ flutter:
   assets:
     - dotenv.env
     - assets/images/
-    - assets/svgs/
+    - assets/svg/
     - assets/animation/
     - assets/fire.json
     - assets/resume.pdf
