--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   multi_split_view: ^2.4.0
   markdown: ^7.1.1
   popover: ^0.3.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
