--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.8
+  flutter_svg: ^2.0.10+1
 
   cupertino_icons: ^1.0.2
   dhttpd: ^4.0.1
-  firebase_core: ^2.24.0
-  firebase_auth: ^4.14.1
+  firebase_core: ^2.23.0
+  firebase_auth: ^4.19.6
   google_sign_in: ^6.1.6
   cloud_firestore: ^4.13.2
   flutter_bloc: ^8.1.3
@@ -31,7 +31,7 @@ dependencies:
   url_launcher: ^6.2.1
   http: ^1.1.0
   cached_network_image: ^3.3.0
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
   flutter_markdown: ^0.6.18+3
   markdown_widget: ^2.3.1
@@ -44,9 +44,9 @@ dependencies:
   glowy_borders: ^1.0.2
   flutter_to_pdf: ^0.1.1
   file_saver: ^0.2.9
-  screenshot: ^2.1.0
+  screenshot: ^3.0.0
   pdf: ^3.10.7
-  package_info_plus: ^5.0.1
+  package_info_plus: ^8.0.0
   flutter_dotenv: ^5.1.0
   multi_split_view: ^2.4.0
   markdown: ^7.1.1
